tenzir/integration/data/reference/http2/test_incompatible_options/step_00.ref
error: cannot encode `data` as both `json` and `form`
 --> <input>:1:31
  |
1 | load_http "", form=true, json=true
  |                               ^^^^ 
  ⋮
1 | load_http "", form=true, json=true
  |                    ^^^^ 
  |